fixing angular and some tests; still not showing results in integration

--- a/web/src/main/webapp/styles/sass/style.scss
+++ b/web/src/main/webapp/styles/sass/style.scss
@@ -42,6 +42,10 @@ a, .bookmark-link, .bookmark-label, .page-link {
     color: $darkRed;
 }
 
+a.button, a.btn {
+    color:inherit;
+}
+
 .red {
     color: $darkRed;
 }
@@ -86,7 +90,7 @@ a.tdarButton, .tdar-button, input.tdar-button[type=submit] {
         border-radius: 2px;
         font-weight: 700;
         font-size: 12px;
-        color: #fff;
+        color: #fff !important;
         text-transform: uppercase;
         letter-spacing: 1px;
         text-align: center;
